- 07: Bugfix #840: Code export wrongly used information from disabled elements <2>
- 07: Bugfix #841: Analyser check against missing parameter list did not work <2>
- 07: Bugfix #843: Handling of global declarations in PHP export was missing <2>
- 07: Bugfix #844: Sensible export of arrays and record types/vars to PHP <2>
- 08: Enh. #842: Improved usability of the include list editor [H.-U. Hölscher]2
- 08: Bugfix #847: Inconsistent handling of upper/lowercase operand names <2>
- 08: Bugfix #848: Incomplete variable synchronisation with Includables <2>
- 08: Bugfix #849: New log file name scheme change of release 3.30 ensured <2>
- 08: Issue #851/1: Declarations for auxiliary variables on COBOL import <2>
- 08: Issue #851/4: Provisional import of SORT statements from COBOL <2>
- 08: Issue #851/5: Solution for the import of PERFORM ... THRU ... from COBOL <2>
- 08: Bugfix #852: Case-ignorant F&R replacements failed for certain strings <2>
- 08: Bugfix #853: Batch export with relative paths of and in arr file failed <2>

Version: 3.30 (2019-10-06)
- 01: Issue #657: Spanish message in German locale replaced <2>
- 01: Enh. #662/1: Info box for groups redesigned into a tree view <2>
- 01: Enh. #662/2: Group visualisation with individual colours in Arranger <2>
- 01: Enh. #662/3: Arranger popup menu item to rearrange diagrams by groups <2>
- 01: Enh. #662/4: Option to save arrangements with relative coordinates <2>
- 01: Bugfix #664: Incorrect handling of modified diagrams on closing Arranger <2>
- 01: Bugfix #664: Disambiguated canceling in AUTO_SAVE_ON_CLOSE mode <2>
- 01: Bugfix #515: Defective diagram positioning in Arranger mended <2>
- 02: Bugfix #665: Import of INSPECT statements from COBOL actually works now <2>
- 02: Bugfix #655: Arranger popup menu revised (item order, accelerator info) <2>
- 02: Bugfix #667: Removal of diagrams from Arranger could leave remnants <2>
- 02: Issue #668: Group association behaviour on outsourcing further improved <2>